# ScreenerClaw

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  cli.py  pyproject.toml  requirements.txt  run_backend.py  run_bot.py  screener_claw_idea.md
agent_skills/: AGENTS.md  MEMORY.md  SOUL.md
agent_skills/business_agent/: SKILL.md
agent_skills/macro_agent/: SKILL.md
agent_skills/query_generator/: SKILL.md
agent_skills/report_agent/: SKILL.md
agent_skills/valuation/: SKILL.md
agent_skills/verdict_agent/: SKILL.md
backend/: __init__.py  config.py  gateway.py  llm_client.py  logger.py  main.py  memory_manager.py  pdf_generator.py  pipeline.py  report_builder.py  session_manager.py
baileys_bridge/: bridge.js  package-lock.json  package.json
cache/: 519421.json  ACE.json  ADANIGREEN.json  ADANITRANS.json  AKZOINDIA.json  ALKEM.json  ALKYLAMINE.json  APOLLOHOSP.json  ASHOKA.json  ASHOKLEY.json  ATLANTAELE.json  AUROPHARMA.json  AXISBANK.json  BAJAJ-AUTO.json  BALKRISIND.json  BANDHANBNK.json  BANKBARODA.json  BEL.json  BHARTIARTL.json  BIRLASOFT.json  BLUEDART.json  BLUEJET.json  BOSCHLTD.json  BRITANNIA.json  BSE_500002.json  BSE_500003.json  BSE_500008.json  BSE_500009.json  BSE_500010.json  BSE_500012.json  BSE_500013.json  BSE_500014.json  BSE_500016.json  BSE_500020.json  BSE_500023.json  BSE_500028.json  BSE_500029.json  BSE_500030.json  BSE_500031.json  BSE_500033.json  (+130 more)
data/: bse_stocks.json  nse_stocks.json
frontend/: package-lock.json  package.json  tailwind.config.js
openclaw_understanding/: README.md
tests/: test_web_crawl.py
(+124 files in other folders)
